--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -17,6 +17,13 @@
 	"login.button": "Iniciar sessión",
 	"login.headline": "La manera fácil y rápida de ingerir datos",
 	"login.not-connected": "No estás conectado, haz clic en el botón para iniciar sesión en el navegador",
+	"pastanaga.cancel": "Cancelar",
+	"pastanaga.confirm": "Confirmar",
+	"pastanaga.datetime.a-few-seconds-ago": "Justo ahora",
+	"pastanaga.datetime.at": "a",
+	"pastanaga.datetime.minutesAgo": "Hace {{minutes}} minutos",
+	"pastanaga.datetime.one-minute-ago": "Hace 1 minuto",
+	"pastanaga.datetime.yesterday": "Ayer",
 	"upload.data": "Subir datos",
 	"upload.destination.description": "Envía los datos seleccionados a",
 	"upload.destination.title": "Definir la destinación",
