--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -17,6 +17,13 @@
 	"login.button": "Se connecter",
 	"login.headline": "Le plus simple et le plus rapide moyen de traiter des données",
 	"login.not-connected": "Vous n'êtes pas connecté, cliquez sur le bouton pour vous connecter via votre navigateur",
+	"pastanaga.cancel": "Annuler",
+	"pastanaga.confirm": "Confirmer",
+	"pastanaga.datetime.a-few-seconds-ago": "À l'instant",
+	"pastanaga.datetime.at": "à",
+	"pastanaga.datetime.minutesAgo": "Il y a {{minutes}} minutes",
+	"pastanaga.datetime.one-minute-ago": "Il y a 1 minute",
+	"pastanaga.datetime.yesterday": "Hier",
 	"upload.data": "télécharger des données",
 	"upload.destination.description": "Transférez vos données sélectionnées vers",
 	"upload.destination.title": "Définir la destination",
