--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -17,6 +17,13 @@
 	"login.button": "Log in",
 	"login.headline": "The easiest and fastest way to ingest data",
 	"login.not-connected": "You’re not connected, click the button to log in",
+	"pastanaga.cancel": "Cancel",
+	"pastanaga.confirm": "Confirm",
+	"pastanaga.datetime.a-few-seconds-ago": "Just now",
+	"pastanaga.datetime.at": "at",
+	"pastanaga.datetime.minutesAgo": "{{minutes}} mins ago",
+	"pastanaga.datetime.one-minute-ago": "1 min ago",
+	"pastanaga.datetime.yesterday": "Yesterday",
 	"upload.data": "Upload data",
 	"upload.destination.description": "Push your selected data to",
 	"upload.destination.title": "Define the destination",
