Ericbrehault/sc 5438/fix dropbox bug (#755)
* display version + commit hash

* open doc in a real browser

* fix dropbox

* fix test + i18n

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -17,6 +17,13 @@
 	"login.button": "Accedir",
 	"login.headline": "La forma més fàcil i ràpida d'ingerir dades",
 	"login.not-connected": "No esteu connectat, feu clic al botó per iniciar sessió al navegador",
+	"pastanaga.cancel": "Cancel·lar",
+	"pastanaga.confirm": "Confirmar",
+	"pastanaga.datetime.a-few-seconds-ago": "Ara mateix",
+	"pastanaga.datetime.at": "a",
+	"pastanaga.datetime.minutesAgo": "Fa {{minutes}} minuts",
+	"pastanaga.datetime.one-minute-ago": "Fa 1 min",
+	"pastanaga.datetime.yesterday": "Ahir",
 	"upload.data": "Pujar dades",
 	"upload.destination.description": "Envia les dades seleccionades a",
 	"upload.destination.title": "Definir la destinació",
