Add NUA API key status on contributor app
  - Show status on the page header
  - Update home page message depending on the status
  - Display warning on search page and upload when no NUA key

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -6,13 +6,13 @@
 	"account.admin.make_admin": "Fer Administrador",
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
 	"account.billing": "Pagament i subscripció",
-	"account.chart_ML_characters": "Caràcters ML",
 	"account.chart_documents": "Documents no multimèdia",
 	"account.chart_error_chars": "No s'han pogut obtenir les dades dels \"caràcters ML\".",
 	"account.chart_error_docs_no_media": "No s'han pogut obtenir les dades del \"document no multimèdia\".",
 	"account.chart_error_media_seconds": "No s'han pogut obtenir les dades de l'\"Horari dels mitjans\".",
 	"account.chart_error_processing_status": "No s'han pogut obtenir les dades dels \"recursos pendents de processar\".",
 	"account.chart_media_hours": "Horari dels mitjans",
+	"account.chart_ML_characters": "Caràcters ML",
 	"account.chart_number_resources": "Nombre de recursos",
 	"account.chart_range_label": "Darrers {{hours}}",
 	"account.chart_title_pending_resources": "Recursos pendents de tramitar",
@@ -461,7 +461,6 @@
 	"onboarding.dataset.option2.description": "Carregueu algunes carpetes, enllaços o afegiu recursos des d'un CSV perquè pugueu utilitzar Nuclia. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
 	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia",
 	"onboarding.get_started": "Començar",
-	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.chemical_industry": "Indústria química",
 	"onboarding.industry.construction": "Construcció",
 	"onboarding.industry.education": "Educació",
@@ -471,6 +470,7 @@
 	"onboarding.industry.food_service": "Servei de menjar",
 	"onboarding.industry.health": "Salut",
 	"onboarding.industry.insurance": "Assegurança",
+	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.legal": "Legal",
 	"onboarding.industry.manufacturing": "Fabricació",
 	"onboarding.industry.marketing": "Màrqueting",
@@ -651,6 +651,11 @@
 	"setup.soon_more_areas": "Més zones per escollir properament",
 	"setup.upload_file": "Puja un arxiu",
 	"setup.upload_using_api": "Puja dades amb l'API",
+	"standalone.nua-key-status.invalid": "La clau de l'API NUA proporcionada no és vàlida",
+	"standalone.nua-key-status.loading-error": "S'ha produït un error en carregar l'estat de la clau de l'API NUA",
+	"standalone.nua-key-status.not-provided": "No s'ha proporcionat cap clau de l'API NUA",
+	"standalone.search-no-nua-key": "Esteu desconnectat del servidor nuclia.cloud i només obtindreu respostes basades en paraules clau. Els resultats semàntics i la cerca de gràfics de coneixement no funcionaran. Per obtenir una experiència de cerca completa, connecteu-vos al servidor mitjançant una clau API NUA.",
+	"standalone.upload-no-nua-key": "No esteu connectat al servidor <strong>nuclia.cloud</strong> i les dades noves no es processaran.",
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
 	"stash.create": "Crea una caixa de coneixement",
@@ -778,10 +783,10 @@
 	"stash.widgets.relations": "Relacions",
 	"stash.widgets.relations.help": "Mostra informació de les entitats relacionades en els resultats de cerca",
 	"stash.widgets.snippet": "Fragment de codi",
-	"stash.widgets.suggestLabels": "Suggereix etiquetes",
-	"stash.widgets.suggestLabels.help": "Quan s'ha realitzat l'entrenament de la intenció de cerca d'etiquetes, es mostren les etiquetes suggerides en funció de la consulta",
 	"stash.widgets.suggestions": "Suggeriments",
 	"stash.widgets.suggestions.help": "Suggereix resultats mentre escriviu la consulta de cerca",
+	"stash.widgets.suggestLabels": "Suggereix etiquetes",
+	"stash.widgets.suggestLabels.help": "Quan s'ha realitzat l'entrenament de la intenció de cerca d'etiquetes, es mostren les etiquetes suggerides en funció de la consulta",
 	"stash.widgets.synonyms": "Coincidir amb sinònims",
 	"stash.widgets.synonyms.help": "Relaciona sinònims a la cerca difusa. No es pot utilitzar amb l'opció de relació.",
 	"stash.widgets.title": "Generador de widgets de cerca",
