--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -6,13 +6,13 @@
 	"account.admin.make_admin": "Hacer administrador",
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
 	"account.billing": "Pago y suscripción",
-	"account.chart_ML_characters": "Caracteres ML",
 	"account.chart_documents": "Documentos no multimedia",
 	"account.chart_error_chars": "No se pueden recuperar los datos de \"caracteres ML\"",
 	"account.chart_error_docs_no_media": "No se pueden recuperar los datos del \"documento no multimedia\"",
 	"account.chart_error_media_seconds": "No se pueden obtener los datos de \"Horas de medios\"",
 	"account.chart_error_processing_status": "No se pueden recuperar los datos de \"recursos pendientes de procesamiento\"",
 	"account.chart_media_hours": "Horas de los medios",
+	"account.chart_ML_characters": "Caracteres ML",
 	"account.chart_number_resources": "Número de recursos",
 	"account.chart_range_label": "Último {{hours}}",
 	"account.chart_title_pending_resources": "Recursos pendientes de tramitar",
@@ -461,7 +461,6 @@
 	"onboarding.dataset.option2.description": "Cargue algunas carpetas, enlaces o agregue recursos desde un CSV para que pueda usar Nuclia. Tenga en cuenta que procesar, categorizar e indexar el contenido puede llevar algún tiempo.",
 	"onboarding.dataset.title": "Comienza a usar Nuclia",
 	"onboarding.get_started": "Empezar",
-	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.chemical_industry": "Industria química",
 	"onboarding.industry.construction": "Construcción",
 	"onboarding.industry.education": "Educación",
@@ -471,6 +470,7 @@
 	"onboarding.industry.food_service": "Servicio de comida",
 	"onboarding.industry.health": "Salud",
 	"onboarding.industry.insurance": "Seguro",
+	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.legal": "Legal",
 	"onboarding.industry.manufacturing": "Fabricación",
 	"onboarding.industry.marketing": "Márketing",
@@ -651,6 +651,11 @@
 	"setup.soon_more_areas": "Más zonas para escoger próximamente",
 	"setup.upload_file": "Sube un archivo",
 	"setup.upload_using_api": "Sube datos con la API",
+	"standalone.nua-key-status.invalid": "La clave API NUA proporcionada no es válida",
+	"standalone.nua-key-status.loading-error": "Error al cargar el estado de la clave API de NUA",
+	"standalone.nua-key-status.not-provided": "No se proporcionó ninguna clave API NUA",
+	"standalone.search-no-nua-key": "Estás desconectado del servidor nuclia.cloud y solo obtendrás respuestas basadas en palabras clave. Los resultados semánticos y la búsqueda de gráficos de conocimiento no funcionarán. Para una experiencia de búsqueda completa, conéctese al servidor utilizando una clave API NUA.",
+	"standalone.upload-no-nua-key": "No estás conectado al servidor <strong>nuclia.cloud</strong> y no se procesarán nuevos datos.",
 	"stash.add_user": "Añadir usuario",
 	"stash.added_user": "El usuario {{user}} ha sido añadido",
 	"stash.create": "Crea una caja de conocimiento",
@@ -778,10 +783,10 @@
 	"stash.widgets.relations": "Relaciones",
 	"stash.widgets.relations.help": "Muestra información de las entidades relacionadas en los resultados de búsqueda.",
 	"stash.widgets.snippet": "Fragmento de código",
-	"stash.widgets.suggestLabels": "Sugerir etiquetas",
-	"stash.widgets.suggestLabels.help": "Cuando se ha realizado el entrenamiento de la intención de búsqueda de etiquetas, muestra las etiquetas sugeridas en función de la consulta",
 	"stash.widgets.suggestions": "Sugerencias",
 	"stash.widgets.suggestions.help": "Sugerir resultados mientras escribe la consulta de búsqueda",
+	"stash.widgets.suggestLabels": "Sugerir etiquetas",
+	"stash.widgets.suggestLabels.help": "Cuando se ha realizado el entrenamiento de la intención de búsqueda de etiquetas, muestra las etiquetas sugeridas en función de la consulta",
 	"stash.widgets.synonyms": "Coincidencia de sinónimos",
 	"stash.widgets.synonyms.help": "Coincidencia de sinónimos en la búsqueda difusa. No se puede utilizar con la opción de relación.",
 	"stash.widgets.title": "Generador de widgets de búsqueda",
