--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -6,13 +6,13 @@
 	"account.admin.make_admin": "Make Administrator",
 	"account.admin.warning": "If you give the administrator role to this user, they will be able to access and edit all options.",
 	"account.billing": "Payment & Subscription",
-	"account.chart_ML_characters": "ML characters",
 	"account.chart_documents": "Non-media documents",
 	"account.chart_error_chars": "Unable to fetch \"ML characters\" data",
 	"account.chart_error_docs_no_media": "Unable to fetch \"Non-media document\" data",
 	"account.chart_error_media_seconds": "Unable to fetch \"Media hours\" data",
 	"account.chart_error_processing_status": "Unable to fetch \"resources pending to be processed\" data",
 	"account.chart_media_hours": "Media hours",
+	"account.chart_ML_characters": "ML characters",
 	"account.chart_number_resources": "Number of resources",
 	"account.chart_range_label": "Last {{hours}}",
 	"account.chart_title_pending_resources": "Resources pending to be processed",
@@ -479,7 +479,6 @@
 	"onboarding.dataset.option2.description": "Upload some folders, links or add resources from a CSV so you can use Nuclia. Be aware that processing, categorizing and indexing the content can take some time.",
 	"onboarding.dataset.title": "Start using Nuclia",
 	"onboarding.get_started": "Get started",
-	"onboarding.industry.IT_software": "IT / Software",
 	"onboarding.industry.chemical_industry": "Chemical industry",
 	"onboarding.industry.construction": "Construction",
 	"onboarding.industry.education": "Education",
@@ -489,6 +488,7 @@
 	"onboarding.industry.food_service": "Food service",
 	"onboarding.industry.health": "Health",
 	"onboarding.industry.insurance": "Insurance",
+	"onboarding.industry.IT_software": "IT / Software",
 	"onboarding.industry.legal": "Legal",
 	"onboarding.industry.manufacturing": "Manufacturing",
 	"onboarding.industry.marketing": "Marketing",
@@ -672,6 +672,11 @@
 	"setup.soon_more_areas": "More areas coming soon",
 	"setup.upload_file": "Upload a file",
 	"setup.upload_using_api": "Upload using the API",
+	"standalone.nua-key-status.invalid": "NUA API key provided is invalid",
+	"standalone.nua-key-status.loading-error": "Error while loading NUA API key status",
+	"standalone.nua-key-status.not-provided": "No NUA API key provided",
+	"standalone.search-no-nua-key": "You are disconnected from the nuclia.cloud server and you will only get keyword-based answers. Semantic results and knowledge graph search will not work. For a complete search experience, please connect to the server using a NUA API key.",
+	"standalone.upload-no-nua-key": "You are not connected to the <strong>nuclia.cloud</strong> server and new data won’t be processed.",
 	"stash.add_user": "Add user",
 	"stash.added_user": "{{user}} has been added",
 	"stash.contact_admin": "You are not authorized to create a knowledge box. Contact your administrator.",
@@ -810,10 +815,10 @@
 	"stash.widgets.relations": "Relations",
 	"stash.widgets.relations.help": "Displays information about related entities in the search results",
 	"stash.widgets.snippet": "Code snippet",
-	"stash.widgets.suggestLabels": "Suggest labels",
-	"stash.widgets.suggestLabels.help": "When label search intent training has been done, displays labels suggested based on the query",
 	"stash.widgets.suggestions": "Suggestions",
 	"stash.widgets.suggestions.help": "Suggest results while typing search query",
+	"stash.widgets.suggestLabels": "Suggest labels",
+	"stash.widgets.suggestLabels.help": "When label search intent training has been done, displays labels suggested based on the query",
 	"stash.widgets.synonyms": "Match synomyms",
 	"stash.widgets.synonyms.help": "Match synonyms in fuzzy search. It cannot be used with the relation option.",
 	"stash.widgets.title": "Search widget generator",
