--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -773,6 +773,8 @@
 	"stash.widgets.navigateToFile.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá el archivo original en lugar de mostrarlo en el visor.",
 	"stash.widgets.navigateToLink": "Navega hacia los enlaces",
 	"stash.widgets.navigateToLink.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá la página original en lugar de mostrarla en el visor.",
+	"stash.widgets.onlyAnswers": "Solo respuestas",
+	"stash.widgets.onlyAnswers.help": "Muestra respuestas pero no resultados de búsqueda. Esta opción solo tiene efecto si la generación de respuestas está habilitada",
 	"stash.widgets.permalink": "Permalinks",
 	"stash.widgets.permalink.help": "Agregue parámetros adicionales en la URL que permita la apertura directa de un recurso o de los resultados de una búsqueda",
 	"stash.widgets.placeholder": "Placeholder de la barra de búsqueda",
