[sc-5400] Improve user feedback on upload
- Don't call `sdk.refreshCounter` while uploading files
- Display a success toast when upload is successful
- Manage status count in upload service

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -416,7 +416,6 @@
 	"modal.upload.file_duplicated": "Aquest fitxer està duplicat. Existeix un fitxer idèntic a la caixa de coneixement",
 	"modal.upload.file_invalid": "Fitxer no vàlid",
 	"modal.upload.queue_length": "Mida de la cua",
-	"modal.upload.success": "Fitxer pujat correctament",
 	"modal.upload.title": "Puja els teus fitxers",
 	"modal.upload_folder": "Afegeix una carpeta",
 	"ner-add-entity-dialog.title": "Afegeix entitats amb nom",
@@ -836,6 +835,7 @@
 	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
 	"upload.size_warning_2": "Els fitxers que superin aquestes mides no es penjaran",
 	"upload.takes_time": "Nuclia necessita una estona per a processar els fitxers.",
+	"upload.toast.successful": "Pujada correctament",
 	"upload.upload_from_csv": "Afegir recursos des de CSV",
 	"upload.uploading_files": "<strong>Càrrega de fitxers.</strong> Mentrestant, no dubteu a utilitzar Nuclia",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes. Les etiquetes es crearan automàticament si encara no estan definides al caixa de coneixement.",
