--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -434,7 +434,6 @@
 	"modal.upload.file_duplicated": "This file is a duplicate. There is an identical file in the knowledge box",
 	"modal.upload.file_invalid": "Invalid file",
 	"modal.upload.queue_length": "Queue length",
-	"modal.upload.success": "File uploaded successfully",
 	"modal.upload.title": "Upload your files",
 	"modal.upload_folder": "Add a folder",
 	"ner-add-entity-dialog.title": "Add named entities",
@@ -879,6 +878,7 @@
 	"upload.size_warning_1": "Media files can not exceed {{ maxMedia }} and non-media files {{ max }}.",
 	"upload.size_warning_2": "Files exceeding those sizes will not be uploaded",
 	"upload.takes_time": "We needs some time to process the files. Feel free to close this dialog box and keep working.",
+	"upload.toast.successful": "Upload successful",
 	"upload.upload_from_csv": "Add resources from CSV",
 	"upload.uploading_files": "<strong>Uploading files.</strong> Feel free to use Nuclia in the meantime",
 	"upload.use_folder_as_labels.help": "First-level folder is the label set name, subfolders are labels. If subfolders are nested, files will get multiple labels. Labels will be created automatically if they are not defined in the knowledge box yet.",
