--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -416,7 +416,6 @@
 	"modal.upload.file_duplicated": "Este archivo está duplicado. Hay un archivo idéntico en la caja de conocimiento.",
 	"modal.upload.file_invalid": "Archivo inválido",
 	"modal.upload.queue_length": "Tamaño de la cola",
-	"modal.upload.success": "Archivo cargado con éxito",
 	"modal.upload.title": "Sube tus ficheros",
 	"modal.upload_folder": "Añade una carpeta",
 	"ner-add-entity-dialog.title": "Agregar entidades nombradas",
@@ -836,6 +835,7 @@
 	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
 	"upload.size_warning_2": "Los archivos que excedan esos tamaños no se cargarán",
 	"upload.takes_time": "Nuclia necesita un rato para procesar los archivos.",
+	"upload.toast.successful": "Subida exitosa",
 	"upload.upload_from_csv": "Añadir recursos desde CSV",
 	"upload.uploading_files": "<strong>Subiendo archivos.</strong> Siéntase libre de usar Nuclia mientras tanto",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas. Las etiquetas se crearán automáticamente si aún no están definidas en la caja de conocimiento.",
