[sc-4884] Widget options for answer (#764)
* [sc-4884] Widget options for answer

* Text change in subscriptions page

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -112,6 +112,7 @@
 	"autocomplete.section.next_words": "Suggested words",
 	"autocomplete.section.paragraph": "Suggested paragraph",
 	"billing.address": "Address",
+	"billing.already_available": "Already available",
 	"billing.assistance": "Please, <a href=\"{{url}}\">contact us</a> for assistance.",
 	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
@@ -804,6 +805,8 @@
 	"stash.widgets.navigateToFile.help": "When using Nuclia to search web pages, clicking on a result will open the original file rather than rendering it in the viewer",
 	"stash.widgets.navigateToLink": "Navigate to links",
 	"stash.widgets.navigateToLink.help": "When using Nuclia to search web pages, clicking on a result will open the original page rather than rendering it in the viewer",
+	"stash.widgets.onlyAnswers": "Only answers",
+	"stash.widgets.onlyAnswers.help": "Displays answers but not search results. This option only has effect if answer generation is enabled",
 	"stash.widgets.permalink": "Permalinks",
 	"stash.widgets.permalink.help": "Add extra parameters in URL allowing direct opening of a resource or search results",
 	"stash.widgets.placeholder": "Search bar placeholder",
