--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -101,6 +101,7 @@
 	"autocomplete.section.next_words": "Palabras sugeridas",
 	"autocomplete.section.paragraph": "Párrafo sugerido",
 	"billing.address": "Dirección",
+	"billing.already_available": "Ya disponible",
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Calculadora de presupuesto",
@@ -772,6 +773,8 @@
 	"stash.widgets.navigateToFile.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá el archivo original en lugar de mostrarlo en el visor.",
 	"stash.widgets.navigateToLink": "Navega hacia los enlaces",
 	"stash.widgets.navigateToLink.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá la página original en lugar de mostrarla en el visor.",
+	"stash.widgets.onlyAnswers": "Solo respuestas",
+	"stash.widgets.onlyAnswers.help": "Muestra respuestas pero no resultados de búsqueda. Esta opción solo tiene efecto si la generación de respuestas está habilitada",
 	"stash.widgets.permalink": "Permalinks",
 	"stash.widgets.permalink.help": "Agregue parámetros adicionales en la URL que permita la apertura directa de un recurso o de los resultados de una búsqueda",
 	"stash.widgets.placeholder": "Placeholder de la barra de búsqueda",
