failed is emitted several times because of mergeMap, use a boolean to notofied only once

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -797,6 +797,7 @@
 	"stash.widgets.warning-dangerous-snippet": "Zona perillosa! Perquè aquest giny funcioni amb una caixa de coneixement privada, cal que proporcioneu un testimoni d'API.",
 	"stash.widgets.warning-dangerous-snippet-details": "No utilitzeu aquest fragment en un lloc web públic.",
 	"stats.get_started": "Començar",
+	"stats.total.sentences": "Vectors",
 	"stats.total.title": "Recursos",
 	"synonyms.add-form.bidirectional-checkbox": "Bidireccional",
 	"synonyms.add-form.main-word-label": "Paraula principal",
@@ -839,6 +840,7 @@
 	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
 	"upload.size_warning_2": "Els fitxers que superin aquestes mides no es penjaran",
 	"upload.takes_time": "Nuclia necessita una estona per a processar els fitxers.",
+	"upload.toast.failed": "Errors durant la càrrega",
 	"upload.toast.successful": "Pujada correctament",
 	"upload.upload_from_csv": "Afegir recursos des de CSV",
 	"upload.uploading_files": "<strong>Càrrega de fitxers.</strong> Mentrestant, no dubteu a utilitzar Nuclia",
