--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -833,7 +833,7 @@
 	"stats.processing_time": "Processing time",
 	"stats.total.fields": "Fields",
 	"stats.total.paragraphs": "Paragraphs",
-	"stats.total.sentences": "Sentences",
+	"stats.total.sentences": "Vectors",
 	"stats.total.title": "Resources",
 	"stats.total_search": "Total search operations",
 	"synonyms.add-form.bidirectional-checkbox": "Bidirectional",
@@ -882,6 +882,7 @@
 	"upload.size_warning_1": "Media files can not exceed {{ maxMedia }} and non-media files {{ max }}.",
 	"upload.size_warning_2": "Files exceeding those sizes will not be uploaded",
 	"upload.takes_time": "We needs some time to process the files. Feel free to close this dialog box and keep working.",
+	"upload.toast.failed": "Errors during upload",
 	"upload.toast.successful": "Upload successful",
 	"upload.upload_from_csv": "Add resources from CSV",
 	"upload.uploading_files": "<strong>Uploading files.</strong> Feel free to use Nuclia in the meantime",
