--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -797,6 +797,7 @@
 	"stash.widgets.warning-dangerous-snippet": "¡Zona peligrosa! Para que este widget funcione con un cuadro de conocimiento privado, debe proporcionar un token de API.",
 	"stash.widgets.warning-dangerous-snippet-details": "No utilice este fragmento en un sitio web público.",
 	"stats.get_started": "Empezar",
+	"stats.total.sentences": "Vectores",
 	"stats.total.title": "Recursos",
 	"synonyms.add-form.bidirectional-checkbox": "Bidireccional",
 	"synonyms.add-form.main-word-label": "Palabra principal",
@@ -839,6 +840,7 @@
 	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
 	"upload.size_warning_2": "Los archivos que excedan esos tamaños no se cargarán",
 	"upload.takes_time": "Nuclia necesita un rato para procesar los archivos.",
+	"upload.toast.failed": "Errores durante la carga",
 	"upload.toast.successful": "Subida exitosa",
 	"upload.upload_from_csv": "Añadir recursos desde CSV",
 	"upload.uploading_files": "<strong>Subiendo archivos.</strong> Siéntase libre de usar Nuclia mientras tanto",
