[sc-5585] Implement invoices page

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -102,6 +102,7 @@
 	"autocomplete.section.paragraph": "Párrafo sugerido",
 	"billing.address": "Dirección",
 	"billing.already_available": "Ya disponible",
+	"billing.amount": "Importe",
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget_calculator": "Calculadora de presupuesto",
@@ -141,6 +142,8 @@
 	"billing.features.videos": "Indexación de videos y audio",
 	"billing.features.widget": "Acceso al sistema de widgets",
 	"billing.free": "Gratuito",
+	"billing.history": "Historial",
+	"billing.history.title": "Historial de facturación",
 	"billing.hour": "hora",
 	"billing.hours": "horas",
 	"billing.ingestion_cost": "Costos de ingestión",
@@ -152,6 +155,7 @@
 	"billing.monthly_estimation": "Se estima que el sobreconsumo costará",
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
 	"billing.not_company": "No soy una empresa",
+	"billing.order_number": "Número de pedido",
 	"billing.parameter.files": "¿Cuántos documentos?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
 	"billing.parameter.paragraphs": "¿Cuántos párrafos extraídos?",
@@ -186,6 +190,7 @@
 	"billing.subscription.title": "Niveles de subscripción",
 	"billing.subscription_tier": "Nivel de suscripción",
 	"billing.success": "Suscripción exitosa",
+	"billing.tier": "Nivel",
 	"billing.tier_select.help": "Cada nivel tiene cuotas diferentes. Seleccione un nivel para obtener información más precisa de los costes de consumo.",
 	"billing.trial.title": "{{days}} días de prueba",
 	"billing.unit": "unidad",
@@ -293,6 +298,7 @@
 	"generic.select_tags": "Selecciona etiquetas",
 	"generic.sequential": "secuencial",
 	"generic.settings": "Configuración",
+	"generic.show_more": "Mostrar más",
 	"generic.showing": "Mostrando",
 	"generic.skip": "Omitir",
 	"generic.slug": "Slug",
