--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -102,6 +102,7 @@
 	"autocomplete.section.paragraph": "Paràgraf suggerit",
 	"billing.address": "Adreça",
 	"billing.already_available": "Ja disponible",
+	"billing.amount": "Import",
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget_calculator": "Calculadora de pressupost",
@@ -141,6 +142,8 @@
 	"billing.features.videos": "Vídeos i indexació d'àudio",
 	"billing.features.widget": "Accés al sistema de widgets",
 	"billing.free": "Gratuït",
+	"billing.history": "Historial",
+	"billing.history.title": "Historial de facturació",
 	"billing.hour": "hora",
 	"billing.hours": "hores",
 	"billing.ingestion_cost": "Costos d'ingestió",
@@ -152,6 +155,7 @@
 	"billing.monthly_estimation": "S'estima que el sobreconsum tindrà un cost de",
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
 	"billing.not_company": "No soc una empresa",
+	"billing.order_number": "Número de comanda",
 	"billing.parameter.files": "Quants documents?",
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
 	"billing.parameter.paragraphs": "Quants paràgrafs extrets?",
@@ -186,6 +190,7 @@
 	"billing.subscription.title": "Nivells de subscripció",
 	"billing.subscription_tier": "Nivell de subscripció",
 	"billing.success": "Subscripció satisfactòria",
+	"billing.tier": "Nivell",
 	"billing.tier_select.help": "Cada nivell té quotes diferents. Selecciona un nivell per obtenir informació més acurada dels costos de consum.",
 	"billing.trial.title": "{{days}} dies de prova",
 	"billing.unit": "unitat",
@@ -293,6 +298,7 @@
 	"generic.select_tags": "Selecciona etiquetes",
 	"generic.sequential": "seqüencial",
 	"generic.settings": "Configuració",
+	"generic.show_more": "Veure'n més",
 	"generic.showing": "Mostrant",
 	"generic.skip": "Ometre",
 	"generic.slug": "Slug",
