--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -40,6 +40,7 @@
 	"account.enhanced_model": "Enhanced model",
 	"account.existing_keys": "Existing keys",
 	"account.expired": "Expired",
+	"account.extend_trial": "Extend the free trial",
 	"account.free_trial": "Free trial",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
