--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -33,6 +33,7 @@
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
 	"account.enhanced_model": "Modelo mejorado",
 	"account.expired": "Expirada",
+	"account.extend_trial": "Ampliar Prueba gratis",
 	"account.free_trial": "Prueba gratis",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
